nlw/share/skin/s3/css/screen.css
/* ... */
#st-tags-listing a.tag_name {
    display: block;
    padding-top: 2px;
    float: left;
    max-width: 90%;
    clear: left;
    overflow: hidden;
    text-overflow: ellipsis;
}

div.pagination-container {
    margin: 0 auto;
    width: 43em;
    font-weight: bold;
}

div.pagination-container .paging-back {
    min-width: 15em;
    text-align: right;
    float: left;
}
div.pagination-container .paging-numbers {
    min-width: 13em;
    text-align: center;
    float: left;
}
div.pagination-container .paging-forward {
    min-width: 15em;
    text-align: left;
    float: left;
}

#statistics-attribution {
    white-space: nowrap;
}


/* See {bz: 1597}. If we have initial hint text some day, it should be gray. */
body div#globalNav div input.searchText {
        color: black;
}

.collapsed {
    display: none;
}

#st-edit-mode-container #controlsRight {
    max-width: 64px !important;
}

.table-options {
    width: 100%;
}

.table-options td {
}

.table-options .options {
}

.row.options {
}

.column.options {
}

.row-col-label {
    vertical-align: middle !important;
    text-align: right;
    width: 50%;
}

.table-create input {
    padding-top: -5px;
}

.table-create .error, .table-options .error {
    display: block;
    color: #FF0000;
    margin-bottom: 0px;
}

.table-create, .table-options .buttons {
    margin-top: 5px;
}

.table-create .cancel {
    text-align: right;
}
.table-create .header {
    font-weight: bold;
    font-size: larger;
    padding-bottom: 10px;
}

.col-number, .row-number {
    font-weight: bold;
    font-size: larger;
    text-align: right;
}

.row-col-label {
    font-weight: bold;
}

.row-col-label.two {
    padding-bottom: 5px;
}

